# ApartmentScraper

./: .gitignore  CLAUDE.md  ROADMAP.md  app.py  commands.md  database.py  notifier.py  pipeline.py  pyproject.toml  scorer.py
launchd/: com.apartmentscraper.bot.plist  com.apartmentscraper.plist
src/: app.py  bot.py  contacter.py  database.py  notifier.py  pipeline.py  scorer.py  scraper.py
src/scrapers/: __init__.py  base.py  boligsiden.py  danbolig.py  edc.py  home.py  nybolig.py
