[project]
name = "apartment-scraper"
version = "0.1.0"
description = "Daily apartment scraper for Boligsiden.dk with Telegram notifications"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "playwright",
    "python-dotenv",
    "python-telegram-bot",
    "streamlit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
